update namespace to a new value

--- a/helmChart/templates/ingress.yaml
+++ b/helmChart/templates/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: {{ .Release.Name }}-{{ .Values.labelValue }}-ingress
-  namespace: ingress-nginx
+  namespace: {{ .Values.nameSpace }}
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
